# second_opinion

./: .gitignore  AGENTS.md  AGENT_MEMORY.md  DETAILS.md  README.md  TODO.md  eslint.config.js  package.json
examples/: SKILL.md  consult.md
node/: package-lock.json
node/src/: git.ts  logger.ts  providers.test.ts  system-prompt.ts
node/src/controllers/: consult.ts
rust/: AGENTS.md  Cargo.toml  README.md
rust/src/: cli_exec.rs  config.rs  file_check.rs  git_diff.rs  logger.rs  main.rs  models.rs  prompt.rs  server.rs  system_prompt.rs
scripts/: .test_all_agents.sh.swp  check-dist-fresh.mjs  mcp-ask.sh  obsolete.ci_claude.sh  obsolete.mcp-ask.sh  test_all_agents.sh  test_claude.sh  test_codex.sh  test_gemini.sh  test_kilo.sh
src/: config.ts  file.ts  git.test.ts  git.ts  llm-cost.ts  llm-query.ts  llm.test.ts  llm.ts  models.ts  prompt.test.ts  providers.test.ts  providers.ts  schema.test.ts  schema.ts  server.test.ts  server.ts  system-prompt.ts
src/controllers/: consult.ts  get-advice.ts
