[package]
name = "grey-rso"
version = "0.1.0"
edition = "2021"
description = "Second Opinion MCP server — consult a different AI coding assistant (Rust)"
license = "MIT"

[[bin]]
name = "grey-rso"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.14", features = ["server", "transport-io", "macros"] }
tokio = { version = "1", features = ["rt", "macros", "process", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
thiserror = "2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
